# regionintelligence

./: README.md  datagov.md  pyproject.toml
agenda_extract/: README.md  main_run.py  pyproject.toml
agenda_extract/.github/: workflows.yaml
agenda_extract/data/concatenated/: concatenated_2024-03-20.json  latest_agendas_2024-03-21.json  latest_agendas_2024-03-22.json
agenda_extract/data/final/: city_agendas_2024-03-22_data.json
agenda_extract/data/json/: legistar_commissions.json  legistar_commissions_2024-03-19.json  primegov_commissions_2024-03-19.json  primegov_commissions_202403-19.json
agenda_extract/data/json/legistar/: legistar_commissions_2024-03-20.json  legistar_commissions_2024-03-22.json
agenda_extract/data/json/primegov/: primegov_commissions_2024-03-21.json  primegov_commissions_2024-03-22.json
agenda_extract/notebooks/: 01_BuenaPark_Agenda.ipynb  testing.ipynb
agenda_extract/recycle/: main.py  main2.py  main3.py  main4.py
agenda_extract/src/: ai_extractor.py  concat.py  const.py  driver_config.py  extract.py  legistar.py  paths.py  primegov.py  schemas.py  scrape.py  test.py  validation.py
agenda_extract/tests/: test_legistar.py
apn_insights/: commands.txt  config.yaml  pyproject.toml
apn_insights/notebooks/: 01_apn_insights.ipynb  02_db_normalize.ipynb
apn_insights/src/: ETL_extract.py  ETL_load.py  ETL_transform.py  const.py  paths.py
assessor_land_exploration/California/Los Angeles County/: .env_example  example.py  main.py  pyproject.toml
assessor_land_exploration/California/Los Angeles County/notebook/: 01_transformation.ipynb  02_clean_dataframes.ipynb  03_validate_cities_and_keys.ipynb  04_normalize_owner_names.ipynb  05_map_data_dictionaries.ipynb  06_average_sales_zones.ipynb
assessor_land_exploration/California/Los Angeles County/recycle/: recycled_code.ipynb
assessor_land_exploration/California/Los Angeles County/src/: city_const.py  cleaning.py  columns.py  const.py  custom.py  dropbox_extract.py  load.py  paths.py  transform.py  use_code_2023.py
assessor_land_exploration/California/Los Angeles County/tests/: database.py
data/processed/orange/: orange_city_data_2023-10-10.xlsx
data/raw/anaheim/: dev_apps.csv
dev_llm/modules/: README.md
dev_llm/modules/batch_pipeline/: .gitignore  README.md  env_variables.sh  pyproject.toml
dev_llm/modules/batch_pipeline/batch_pipeline/: concat_all_json_codes.py  scrapers.py  send_to_qdrant_vector_db.py  text_to_json.py  upcodes_batch.py  utils.py
dev_llm/modules/batch_pipeline/test_notebooks/: 01_code_batch.ipynb
dev_llm/modules/q_and_a_generator/: .env  Makefile  README.md  pyproject.toml
dev_llm/modules/q_and_a_generator/data/json/california_building_codes_json/: california_20231015.json.REMOVED.git-id
dev_llm/modules/q_and_a_generator/data/json/los_angeles_building_codes_json/: los_angeles_2023-10-17.json.REMOVED.git-id
dev_llm/modules/q_and_a_generator/data/json/san_francisco_building_codes_json/: san_francisco_2023-10-17.json.REMOVED.git-id
dev_llm/modules/q_and_a_generator/data/training/: training_data.json
dev_llm/modules/q_and_a_generator/q_a_notebooks/: 01_upcodes_data_gather.ipynb  03_text_to_json.ipynb  05_generate_dataset.ipynb  05_generate_embeddings.ipynb  06_generate_training_data.ipynb  upcodes_data_gather.ipynb
dev_llm/modules/q_and_a_generator/scripts/: embed_codes_into_quadrant.py  generate_training_data.py  parallel.py  parallel_scraper.py
dev_llm/modules/q_and_a_generator/src/: const.py  data.py  gather_data.py  paths.py  send_to_json.py  vector_db_api.py
map/: .env  README.md  pyproject.toml
map/map_data/processed/anaheim/: anaheim_city_data_2023-10-20.xlsx
map/map_data/processed/orange/: orange_city_data_2023-10-20.xlsx
map/map_data/processed/santaana/: santa_ana_data_2023-10-20.xlsx
map/map_data/raw/santana/: santa-ana-approved_2023-10-09.xlsx  santa-ana-approved_2023-10-20.xlsx  santa-ana-approved_2023-10-28.xlsx  santa-ana-current-projects-selenium_2023-10-09.xlsx  santa-ana-current-projects_2023-10-20.xlsx  santa-ana-current-projects_2023-10-28.xlsx
map/map_data_company_database/anaheim/: anaheim_city_data_2023-11-02.xlsx
map/map_data_company_database/fullerton/: fullerton_city_data_2023-11-02.xlsx
map/map_data_company_database/gardengrove/: garden_grove_data_2023-11-02.xlsx
map/map_data_company_database/orange/: orange_city_data_2023-11-02.xlsx
map/map_data_company_database/santana/: santa_ana_data_2023-11-02.xlsx
map/map_data_production/final/: final_dataframe.csv  final_dataframe.xlsx
map/map_data_production/processed/anaheim/: anaheim_city_data_2023-11-01.xlsx  anaheim_city_data_2023-11-02.xlsx
map/map_data_production/processed/fullerton/: fullerton_city_data_2023-11-01.xlsx  fullerton_city_data_2023-11-02.xlsx
map/map_data_production/processed/gardengrove/: garden_grove_data_2023-11-01.xlsx  garden_grove_data_2023-11-02.xlsx
map/map_data_production/processed/orange/: orange_city_data_2023-11-01.xlsx  orange_city_data_2023-11-02.xlsx
map/map_data_production/processed/santana/: santa_ana_data_2023-11-01.xlsx  santa_ana_data_2023-11-02.xlsx
map/map_data_production/raw/anaheim/: AndysMap.csv
map/map_data_production/raw/gardengrove/: garden_grove_data_2023-10-22.xlsx
map/map_data_production/raw/santana/: santa-ana-approved_2023-11-01.xlsx  santa-ana-approved_2023-11-02.xlsx  santa-ana-current-projects_2023-11-01.xlsx  santa-ana-current-projects_2023-11-02.xlsx
map/map_notebooks/data engineering/: 01_find_insights.ipynb  03_load_to_cloud.ipynb  desc_explicit_uses.xlsx  example.xlsx
map/map_notebooks/data gathering/: 01_SantaAna_Scraper.ipynb  02_JurupaValley_Scraper.ipynb  03_HuntingtonBeach_Scraper.ipynb  04_Fullerton_Scraper.ipynb  05_Anaheim_Scraper.ipynb  06_GardenGrove_Scraper.ipynb  07_Irvine_Scraper.ipynb
map/scripts/: parallel_scraper.py  transform.py
map/src/: const.py  data.py  logger.py  paths.py
notebooks/data gathering/: 01_SantaAna_Scraper.ipynb  03_OrangeCity_Scraper.ipynb  05_Anaheim_Scraper.ipynb
src/: const.py  data.py  paths.py
src/config/: driver_config.py
(+2 files in other folders)
