[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"
ipykernel = "^6.25.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
