[tool.poetry]
name = "agenda-extract"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.26.0"
selenium = "^4.15.2"
pandas = "^2.1.2"
pdfplumber = "^0.10.3"
bs4 = "^0.0.1"
webdriver-manager = "^4.0.1"
html5lib = "^1.1"
openpyxl = "^3.1.2"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
