[tool.poetry]
name = "entities-extraction-web-scrape"
version = "0.1.2"
description = "a python program that scrapes city agendas and extracts entities from the text"
authors = ["Julian Sotelo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.247"
fastapi = "*"
openai = "0.28.1"
beautifulsoup4 = "*"
python-dotenv = "*"
playwright = "*"
ipykernel = "^6.29.3"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
