[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"
ipykernel = "^6.25.2"
bs4 = "^0.0.1"
tqdm = "^4.66.1"
pdfplumber = "^0.10.2"
openpyxl = "^3.1.2"
pandas = "^2.1.2"
plotly = "^5.18.0"
openai = "^0.28.1"
langchain = "^0.0.325"
psycopg2 = "^2.9.9"
boto3 = "^1.28.73"
nbformat = "^5.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
