[tool.poetry]
name = "streaming-pipeline"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"

[tool.poetry.dependencies]

python = ">=3.10,<3.12"
bytewax = "^0.16.2"
python-dotenv = "^1.0.0"
websocket-client = "^1.6.2"
pydantic = ">=1.8,<2.0"
unstructured = "^0.10.5"
sentencepiece = "^0.1.99"
qdrant-client = "1.1.1"
fire = "^0.5.0"
transformers = "^4.33.1"
torch = "^2.0.1"
pyyaml = "6.0.1"
selenium = "^4.14.0"
webdriver-manager = "^4.0.1"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
