[tool.poetry]
name = "q-and-a-generator"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"
packages = [{include = "q_and_a_generator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.25.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
