[tool.poetry]
name = "q-and-a-generator"
version = "0.1.0"
description = ""
authors = ["Julian Sotelo <juliansotelo@mail.fresnostate.edu>"]
readme = "README.md"
packages = [{include = "q_and_a_generator", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
ipykernel = "^6.25.2"
jupyter = "^1.0.0"
selenium = "^4.14.0"
langchain = "^0.0.313"
neattext = "^0.1.3"
boilerpy3 = "^1.0.6"
pdfplumber = "^0.10.2"
pandas = "^2.1.1"
numpy = "^1.26.0"
transformers = "^4.34.0"
requests = "^2.31.0"
openai = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
